--- a/css/index.css
+++ b/css/index.css
@@ -22,16 +22,12 @@ body {
 
 /* Portrait layout (default) */
 .app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:40%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+    position:relative;             /* position in the center of the screen */
+    width:80%;                   /* text area width */
+    text-align:center;           /* offset horizontal: half of text area width */
+    margin-bottom: 100px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Landscape layout (with min-width) */
